# aic-sdk-plugin

./: .clang-format  .gitignore  CMakeLists.txt  DEVELOPMENT.md  LICENSE.AIC-SDK  README.md
.github/: README.md  SETUP.md
.github/workflows/: build-and-release.yml  manual-build.yml  test-build.yml  test-installers.yml
docs/: CONFIDENTIAL.txt  InstallationGuide.md  ReleaseNotes.md
release/: InstallationGuide.md  ReleaseNotes.md
release/linux/: install.sh
release/macos/: README_INSTALLER.md  build-installer.sh  create_app_installer.sh  install.sh  install_with_gui.command
release/macos/Install ai-coustics Plugins.app/Contents/: Info.plist
release/macos/Install ai-coustics Plugins.app/Contents/MacOS/: installer
release/windows/: create_exe_installer.ps1  install.bat  install.ps1  install_gui.ps1
scripts/linux/: bundle-release.sh  install.sh
scripts/macos/: build-installer.sh  bundle-release.sh  postinstall.sh
scripts/windows/: README_INSTALLER.md  build-installer.ps1  install_gui.ps1  installer.iss
src/: AicColours.h  AicModelInfoBox.h  AicModelSelector.h  AicSlider.h  LicenseDialog.cpp  LicenseDialog.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
